--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "dev": "cross-env NODE_ENV=development nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "cross-env NODE_ENV=development nuxt generate",
-    "deploy": "push-dir --dir=dist --branch=master --cleanup"
+    "generate": "cross-env NODE_ENV=production DEPLOY_ENV=GH_PAGES nuxt generate"
   },
   "dependencies": {
     "@nuxt/common": "^2.3.4",
