Update TEST “about”

--- a/content/test.yml
+++ b/content/test.yml
@@ -1,6 +1,5 @@
-collections:
-  - name: file_test
-    label: file_test
-    folder: 'content/test'
-    format: json
-    create: true
+title: FIRST
+intro: 'gfhfghhjhgjnmgfnmgfmhjm,hj,mhk,kh,'
+team:
+  - name: ALEX
+    position: test
