--- a/static/admin-revision/config.yml
+++ b/static/admin-revision/config.yml
@@ -15,9 +15,7 @@ backend:
   branch: master
   accept_roles: #optional - accepts all users if left out
       - admin
-      - directors
       - revision
-      - supervisory
 
 #  site_domain: komareus.github.io
 collections:
@@ -87,6 +85,10 @@ collections:
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{hour}}-{{minute}}-{{slug}}'
     fields:
+      - label: Chapter
+        name: chapter
+        widget: select
+        options: ["left", "center", "right"]
       - label: Title
         name: title
         widget: string
