--- a/static/admin-revision/config.yml
+++ b/static/admin-revision/config.yml
@@ -2,12 +2,12 @@ media_library:
   name: cloudinary
 #  output_filename_only: true
   config:
-    cloud_name: investor182
-    api_key: 525457938989435
+    cloud_name: revision182
+    api_key: 146582985587968
 #media_folder: /img/uploads
 #media_folder_relative: false
 #public_folder: /img/uploads
-display_url: https://komareus.github.io
+display_url: https://cloudinary.com/users/login
 backend:
 #  name: github
   name: git-gateway
@@ -19,97 +19,126 @@ backend:
 
 #  site_domain: komareus.github.io
 collections:
-  - name: warnings
-    label: Warnings
-    folder: 'content/warnings'
+  - name: documentsStatutory
+    label: 'Звіти'
+    folder: 'content/documents/revision/reports'
     format: json
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{hour}}-{{minute}}-{{slug}}'
     fields:
-      - label: Active
-        name: active
-        widget: boolean
-        default: true
-      - label: Title
+      - label: 'Назва документа'
         name: title
         widget: string
-        required: true
-      - label: Publish date
+      - label: 'Дата публікування'
         name: date
         widget: datetime
-      - label: Content
-        name: text
-        widget: markdown
-  - name: news
-    label: News
-    folder: 'content/news'
-    format: json
-    create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{hour}}-{{minute}}-{{slug}}'
-    fields:
-      - label: Title
-        name: title
-        widget: string
-        required: true
-      - label: Publish date
-        name: date
-        widget: datetime
-      - label: Short text
-        name: short
+      - label: 'Короткий опис'
+        name: description
         widget: text
-        required: true
-      - label: Content
-        name: body
-        widget: list
-        allow_add: true
-        fields:
-          - {label: Paragraph, name: body, widget: markdown}
-          - label: Images
-            name: img
-            widget: list
-            allow_add: true
-            fields:
-              - label: Image
-                name: src
-                widget: image
-                media_library:
-                  config:
-                    default_transformations:
-                      - width: 600
-                        quality: auto
-                        crop: fit
-  - name: documents
-    label: Documents
-    folder: 'content/documents/'
-    format: json
-    create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{hour}}-{{minute}}-{{slug}}'
-    fields:
-      - label: Chapter
-        name: chapter
-        widget: select
-        options: ["left", "center", "right"]
-      - label: Title
-        name: title
-        widget: string
-      - label: File
+        required: false
+      - label: 'Завантажити файл документа'
         name: file
         widget: file
-
-#  - name: test
-#    label:  TEST
-#    files:
-#      - label: "About Page"
-#        name: "about"
-#        file: "/content/test.json"
-#        fields:
-#          - {label: Title, name: title, widget: string}
-#          - {label: Intro, name: intro, widget: markdown}
-#          - label: Team
-#            name: team
-#            widget: list
-#            fields:
-#              - {label: Name, name: name, widget: string}
-#              - {label: Position, name: position, widget: string}
-#              - {label: Photo, name: photo, widget: image}
-
+        required: false
+      - label: 'Додати посилання на документ'
+        name: link
+        widget: string
+        required: false
+      - label: 'Завантажити фото/скани документа'
+        name: img
+        widget: list
+        allow_add: true
+        required: false
+        fields:
+          - label: 'Завантажити зображення'
+            name: src
+            widget: image
+            required: false
+            media_library:
+              config:
+                default_transformations:
+                  - width: 600
+                    quality: auto
+                    crop: fit
+  - name: documentsMail
+    label: 'Протоколи'
+    folder: 'content/documents/revision/protocols'
+    format: json
+    create: true
+    slug: '{{year}}-{{month}}-{{day}}-{{hour}}-{{minute}}-{{slug}}'
+    fields:
+      - label: 'Назва документа'
+        name: title
+        widget: string
+      - label: 'Дата публікування'
+        name: date
+        widget: datetime
+      - label: 'Короткий опис'
+        name: description
+        widget: text
+        required: false
+      - label: 'Завантажити файл документа'
+        name: file
+        widget: file
+        required: false
+      - label: 'Додати посилання на документ'
+        name: link
+        widget: string
+        required: false
+      - label: 'Завантажити фото/скани документа'
+        name: img
+        widget: list
+        allow_add: true
+        required: false
+        fields:
+          - label: 'Завантажити зображення'
+            name: src
+            widget: image
+            required: false
+            media_library:
+              config:
+                default_transformations:
+                  - width: 600
+                    quality: auto
+                    crop: fit
+  - name: documentsOther
+    label: 'Документи різні'
+    folder: 'content/documents/revision/other'
+    format: json
+    create: true
+    slug: '{{year}}-{{month}}-{{day}}-{{hour}}-{{minute}}-{{slug}}'
+    fields:
+      - label: 'Назва документа'
+        name: title
+        widget: string
+      - label: 'Дата публікування'
+        name: date
+        widget: datetime
+      - label: 'Короткий опис'
+        name: description
+        widget: text
+        required: false
+      - label: 'Завантажити файл документа'
+        name: file
+        widget: file
+        required: false
+      - label: 'Додати посилання на документ'
+        name: link
+        widget: string
+        required: false
+      - label: 'Завантажити фото/скани документа'
+        name: img
+        widget: list
+        allow_add: true
+        required: false
+        fields:
+          - label: 'Завантажити зображення'
+            name: src
+            widget: image
+            required: false
+            media_library:
+              config:
+                default_transformations:
+                  - width: 600
+                    quality: auto
+                    crop: fit
