--- a/static/admin-directors/config.yml
+++ b/static/admin-directors/config.yml
@@ -36,19 +36,18 @@ collections:
       - label: 'Завантажити фото/скани документа'
         name: img
         widget: list
-        allow_add: true
-        required: false
-        fields:
-          - label: 'Завантажити зображення'
-            name: src
-            widget: image
-            required: false
-            media_library:
-              config:
-                default_transformations:
-                  - width: 600
-                    quality: auto
-                    crop: fit
+        field:
+          label: 'Завантажити зображення'
+          name: src
+          widget: image
+          required: false
+          media_library:
+            config:
+              default_transformations:
+                - width: 600
+                  quality: auto
+                  crop: fit
+
   - name: documentsAgreements
     label: 'Договори'
     folder: 'content/documents/directors-agreements'
@@ -75,17 +74,17 @@ collections:
         widget: list
         allow_add: true
         required: false
-        fields:
-          - label: 'Завантажити зображення'
-            name: src
-            widget: image
-            required: false
-            media_library:
-              config:
-                default_transformations:
-                  - width: 600
-                    quality: auto
-                    crop: fit
+        field:
+          label: 'Завантажити зображення'
+          name: src
+          widget: image
+          required: false
+          media_library:
+            config:
+              default_transformations:
+                - width: 600
+                  quality: auto
+                  crop: fit
   - name: documentsMail
     label: 'Листування'
     folder: 'content/documents/directors-letters'
@@ -116,17 +115,17 @@ collections:
         widget: list
         allow_add: true
         required: false
-        fields:
-          - label: 'Завантажити зображення'
-            name: src
-            widget: image
-            required: false
-            media_library:
-              config:
-                default_transformations:
-                  - width: 600
-                    quality: auto
-                    crop: fit
+        field:
+          label: 'Завантажити зображення'
+          name: src
+          widget: image
+          required: false
+          media_library:
+            config:
+              default_transformations:
+                - width: 600
+                  quality: auto
+                  crop: fit
   - name: documentsProtocols
     label: 'Протоколи'
     folder: 'content/documents/directors-protocols'
@@ -157,17 +156,17 @@ collections:
         widget: list
         allow_add: true
         required: false
-        fields:
-          - label: 'Завантажити зображення'
-            name: src
-            widget: image
-            required: false
-            media_library:
-              config:
-                default_transformations:
-                  - width: 600
-                    quality: auto
-                    crop: fit
+        field:
+          label: 'Завантажити зображення'
+          name: src
+          widget: image
+          required: false
+          media_library:
+            config:
+              default_transformations:
+                - width: 600
+                  quality: auto
+                  crop: fit
   - name: documentsOther
     label: 'Документи різні'
     folder: 'content/documents/directors-other'
@@ -198,14 +197,14 @@ collections:
         widget: list
         allow_add: true
         required: false
-        fields:
-          - label: 'Завантажити зображення'
-            name: src
-            widget: image
-            required: false
-            media_library:
-              config:
-                default_transformations:
-                  - width: 600
-                    quality: auto
-                    crop: fit
+        field:
+          label: 'Завантажити зображення'
+          name: src
+          widget: image
+          required: false
+          media_library:
+            config:
+              default_transformations:
+                - width: 600
+                  quality: auto
+                  crop: fit
