--- a/static/admin-supervisory/config.yml
+++ b/static/admin-supervisory/config.yml
@@ -49,17 +49,17 @@ collections:
         widget: list
         allow_add: true
         required: false
-        fields:
-          - label: 'Завантажити зображення'
-            name: src
-            widget: image
-            required: false
-            media_library:
-              config:
-                default_transformations:
-                  - width: 600
-                    quality: auto
-                    crop: fit
+        field:
+          label: 'Завантажити зображення'
+          name: src
+          widget: image
+          required: false
+          media_library:
+            config:
+              default_transformations:
+                - width: 600
+                  quality: auto
+                  crop: fit
   - name: documentsMail
     label: 'Інформаційні листи'
     folder: 'content/documents/supervisory-letters'
@@ -90,17 +90,17 @@ collections:
         widget: list
         allow_add: true
         required: false
-        fields:
-          - label: 'Завантажити зображення'
-            name: src
-            widget: image
-            required: false
-            media_library:
-              config:
-                default_transformations:
-                  - width: 600
-                    quality: auto
-                    crop: fit
+        field:
+          label: 'Завантажити зображення'
+          name: src
+          widget: image
+          required: false
+          media_library:
+            config:
+              default_transformations:
+                - width: 600
+                  quality: auto
+                  crop: fit
   - name: documentsOther
     label: 'Документи різні'
     folder: 'content/documents/supervisory-other'
@@ -131,14 +131,14 @@ collections:
         widget: list
         allow_add: true
         required: false
-        fields:
-          - label: 'Завантажити зображення'
-            name: src
-            widget: image
-            required: false
-            media_library:
-              config:
-                default_transformations:
-                  - width: 600
-                    quality: auto
-                    crop: fit
+        field:
+          label: 'Завантажити зображення'
+          name: src
+          widget: image
+          required: false
+          media_library:
+            config:
+              default_transformations:
+                - width: 600
+                  quality: auto
+                  crop: fit
