--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -111,17 +111,17 @@ collections:
         widget: list
         allow_add: true
         required: false
-        fields:
-          - label: 'Завантажити зображення'
-            name: src
-            widget: image
-            required: false
-            media_library:
-              config:
-                default_transformations:
-                  - width: 600
-                    quality: auto
-                    crop: fit
+        field:
+          label: 'Завантажити зображення'
+          name: src
+          widget: image
+          required: false
+          media_library:
+            config:
+              default_transformations:
+                - width: 600
+                  quality: auto
+                  crop: fit
 
 #  - name: test
 #    label:  TEST
