--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/vuetify": "^0.5.6",
     "axios": "^0.19.0",
+    "cookie-universal-nuxt": "^2.0.19",
+    "netlify-identity-widget": "^1.5.5",
     "nuxt": "^2.2.0",
     "vuetify-loader": "^1.2.2"
   },
