--- a/static/admin-directors/config.yml
+++ b/static/admin-directors/config.yml
@@ -8,6 +8,7 @@ backend:
   name: git-gateway
   branch: master
   accept_roles: #optional - accepts all users if left out
+    - admin
     - directors
 #  site_domain: komareus.github.io
 collections:
